--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-     href="style.css" 
+<html lang="pt-br"
+     href="style.css"
     <header class="container text-center">
         <h1>Eu amo ler livros</h1>
         <p>Sou estudante do ensino médio, eu sou apaixonada em ler livros desde que eu me entendo por gente. Eu sempre gostei de ler, comecei lendo livros infantis que vinham num projeto do Itaú, depois avancei para livros infanto-juvenis no ensino fundamental, como A Bolsa Amarela da Lívia Bojunga, livros do Menino Maluquinho, Turma da Mônica e etc. A medida que eu envelheci, meus gostos mudaram juntamente comigo e com a minha personalidade. Hoje em dia sou apaixonada por qualquer livro que tenha fantasia, magia e romance em seu enredo, mundos mágicos, feéricos, principes e princesas, guerras, rebeliões, lutas e tudo o que o mundo da fantasia e distopia pode oferecer!</p>
